[package]
name = "blackbird_disassembler"
version = "0.1.0"
edition = "2021"

[lib]
name = "BKDC"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
capstone = "0.14"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 1